tests/error/comptime/compare_pointers2.bz
// error: invalid pointer comparison
// note: while evaluating expression at compile time
// note: lhs address points to an object from a finished stack frame
// note: rhs address points to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function bar() -> *int32
{
	let j = 0;
	return &j;
}

function test()
{
	(consteval {
		foo() > bar();
	});
}
